src/generated/MiniLangParser.py
# Generated from grammar/MiniLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniLangParser ( Parser ):

    grammarFileName = "MiniLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'for'", "'each'", "'if'", "'else'", "'while'", "'print'", 
                     "'int'", "'float'", "'string'", "'const'", "'bool'", 
                     "'new'", "'do'", "'true'", "'false'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'='", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'('", 
                     "')'", "'{'", "'}'", "';'", "','", "':'", "'.'", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "ML_COMMENT", "WS", "FOR", 
                      "EACH", "IF", "ELSE", "WHILE", "PRINT", "INT", "FLOAT", 
                      "STRING", "CONST", "BOOL", "NEW", "DO", "TRUE", "FALSE", 
                      "INT_LIT", "FLOAT_LIT", "STRING_LIT", "ID", "ASSIGN", 
                      "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", 
                      "MULT", "DIV", "MOD", "NOT", "AND", "OR", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "SEMIC", "COMMA", "COLON", 
                      "DOT", "LBRACK", "RBRACK" ]

    RULE_program = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_if_stmt = 3
    RULE_while_stmt = 4
    RULE_do_while_stmt = 5
    RULE_for_stmt = 6
    RULE_for_each_stmt = 7
    RULE_for_initializer = 8
    RULE_for_iterator = 9
    RULE_print_stmt = 10
    RULE_expression_list = 11
    RULE_declaration = 12
    RULE_type = 13
    RULE_assignment = 14
    RULE_expression = 15
    RULE_logical_or = 16
    RULE_logical_and = 17
    RULE_equality = 18
    RULE_comparison = 19
    RULE_arithmetic = 20
    RULE_term = 21
    RULE_unary = 22
    RULE_factor = 23
    RULE_literal = 24

    ruleNames =  [ "program", "block", "statement", "if_stmt", "while_stmt", 
                   "do_while_stmt", "for_stmt", "for_each_stmt", "for_initializer", 
                   "for_iterator", "print_stmt", "expression_list", "declaration", 
                   "type", "assignment", "expression", "logical_or", "logical_and", 
                   "equality", "comparison", "arithmetic", "term", "unary", 
                   "factor", "literal" ]

    EOF = Token.EOF
    COMMENT=1
    ML_COMMENT=2
    WS=3
    FOR=4
    EACH=5
    IF=6
    ELSE=7
    WHILE=8
    PRINT=9
    INT=10
    FLOAT=11
    STRING=12
    CONST=13
    BOOL=14
    NEW=15
    DO=16
    TRUE=17
    FALSE=18
    INT_LIT=19
    FLOAT_LIT=20
    STRING_LIT=21
    ID=22
    ASSIGN=23
    EQ=24
    NEQ=25
    LT=26
    LTE=27
    GT=28
    GTE=29
    PLUS=30
    MINUS=31
    MULT=32
    DIV=33
    MOD=34
    NOT=35
    AND=36
    OR=37
    LPAREN=38
    RPAREN=39
    LBRACE=40
    RBRACE=41
    SEMIC=42
    COMMA=43
    COLON=44
    DOT=45
    LBRACK=46
    RBRACK=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1410905145168) != 0):
                self.state = 50
                self.statement()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(MiniLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MiniLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniLangParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MiniLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(MiniLangParser.LBRACE)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1410905145168) != 0):
                self.state = 59
                self.statement()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(MiniLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(MiniLangParser.BlockContext,0)


        def declaration(self):
            return self.getTypedRuleContext(MiniLangParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MiniLangParser.AssignmentContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.While_stmtContext,0)


        def do_while_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.Do_while_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.For_stmtContext,0)


        def for_each_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.For_each_stmtContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(MiniLangParser.Print_stmtContext,0)


        def expression(self):
            return self.getTypedRuleContext(MiniLangParser.ExpressionContext,0)


        def SEMIC(self):
            return self.getToken(MiniLangParser.SEMIC, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.if_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.while_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.do_while_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                self.for_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 74
                self.for_each_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 75
                self.print_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 76
                self.expression()
                self.state = 77
                self.match(MiniLangParser.SEMIC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MiniLangParser.IF, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLangParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(MiniLangParser.ELSE, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = MiniLangParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(MiniLangParser.IF)
            self.state = 82
            self.match(MiniLangParser.LPAREN)
            self.state = 83
            self.expression()
            self.state = 84
            self.match(MiniLangParser.RPAREN)
            self.state = 85
            self.statement()
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 86
                self.match(MiniLangParser.ELSE)
                self.state = 87
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MiniLangParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLangParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniLangParser.StatementContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = MiniLangParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(MiniLangParser.WHILE)
            self.state = 91
            self.match(MiniLangParser.LPAREN)
            self.state = 92
            self.expression()
            self.state = 93
            self.match(MiniLangParser.RPAREN)
            self.state = 94
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Do_while_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(MiniLangParser.DO, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniLangParser.StatementContext,0)


        def WHILE(self):
            return self.getToken(MiniLangParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLangParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def SEMIC(self):
            return self.getToken(MiniLangParser.SEMIC, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_do_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDo_while_stmt" ):
                listener.enterDo_while_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDo_while_stmt" ):
                listener.exitDo_while_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo_while_stmt" ):
                return visitor.visitDo_while_stmt(self)
            else:
                return visitor.visitChildren(self)




    def do_while_stmt(self):

        localctx = MiniLangParser.Do_while_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_do_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(MiniLangParser.DO)
            self.state = 97
            self.statement()
            self.state = 98
            self.match(MiniLangParser.WHILE)
            self.state = 99
            self.match(MiniLangParser.LPAREN)
            self.state = 100
            self.expression()
            self.state = 101
            self.match(MiniLangParser.RPAREN)
            self.state = 102
            self.match(MiniLangParser.SEMIC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MiniLangParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def SEMIC(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.SEMIC)
            else:
                return self.getToken(MiniLangParser.SEMIC, i)

        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniLangParser.StatementContext,0)


        def for_initializer(self):
            return self.getTypedRuleContext(MiniLangParser.For_initializerContext,0)


        def expression(self):
            return self.getTypedRuleContext(MiniLangParser.ExpressionContext,0)


        def for_iterator(self):
            return self.getTypedRuleContext(MiniLangParser.For_iteratorContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_for_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_stmt" ):
                listener.enterFor_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_stmt" ):
                listener.exitFor_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_stmt" ):
                return visitor.visitFor_stmt(self)
            else:
                return visitor.visitChildren(self)




    def for_stmt(self):

        localctx = MiniLangParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_for_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MiniLangParser.FOR)
            self.state = 105
            self.match(MiniLangParser.LPAREN)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 311393451008) != 0):
                self.state = 106
                self.for_initializer()


            self.state = 109
            self.match(MiniLangParser.SEMIC)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 311393419264) != 0):
                self.state = 110
                self.expression()


            self.state = 113
            self.match(MiniLangParser.SEMIC)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 311393419264) != 0):
                self.state = 114
                self.for_iterator()


            self.state = 117
            self.match(MiniLangParser.RPAREN)
            self.state = 118
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_each_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MiniLangParser.FOR, 0)

        def EACH(self):
            return self.getToken(MiniLangParser.EACH, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def type_(self):
            return self.getTypedRuleContext(MiniLangParser.TypeContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.ID)
            else:
                return self.getToken(MiniLangParser.ID, i)

        def COLON(self):
            return self.getToken(MiniLangParser.COLON, 0)

        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniLangParser.StatementContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_for_each_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_each_stmt" ):
                listener.enterFor_each_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_each_stmt" ):
                listener.exitFor_each_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_each_stmt" ):
                return visitor.visitFor_each_stmt(self)
            else:
                return visitor.visitChildren(self)




    def for_each_stmt(self):

        localctx = MiniLangParser.For_each_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_for_each_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(MiniLangParser.FOR)
            self.state = 121
            self.match(MiniLangParser.EACH)
            self.state = 122
            self.match(MiniLangParser.LPAREN)
            self.state = 123
            self.type_()
            self.state = 124
            self.match(MiniLangParser.ID)
            self.state = 125
            self.match(MiniLangParser.COLON)
            self.state = 126
            self.match(MiniLangParser.ID)
            self.state = 127
            self.match(MiniLangParser.RPAREN)
            self.state = 128
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_initializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MiniLangParser.DeclarationContext,0)


        def expression_list(self):
            return self.getTypedRuleContext(MiniLangParser.Expression_listContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_for_initializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_initializer" ):
                listener.enterFor_initializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_initializer" ):
                listener.exitFor_initializer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_initializer" ):
                return visitor.visitFor_initializer(self)
            else:
                return visitor.visitChildren(self)




    def for_initializer(self):

        localctx = MiniLangParser.For_initializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_for_initializer)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 11, 12, 13, 14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.declaration()
                pass
            elif token in [15, 17, 18, 19, 20, 21, 22, 31, 35, 38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.expression_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_iteratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_list(self):
            return self.getTypedRuleContext(MiniLangParser.Expression_listContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_for_iterator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_iterator" ):
                listener.enterFor_iterator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_iterator" ):
                listener.exitFor_iterator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_iterator" ):
                return visitor.visitFor_iterator(self)
            else:
                return visitor.visitChildren(self)




    def for_iterator(self):

        localctx = MiniLangParser.For_iteratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for_iterator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.expression_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(MiniLangParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(MiniLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniLangParser.RPAREN, 0)

        def SEMIC(self):
            return self.getToken(MiniLangParser.SEMIC, 0)

        def expression_list(self):
            return self.getTypedRuleContext(MiniLangParser.Expression_listContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_print_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_stmt" ):
                listener.enterPrint_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_stmt" ):
                listener.exitPrint_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_stmt" ):
                return visitor.visitPrint_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_stmt(self):

        localctx = MiniLangParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_print_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(MiniLangParser.PRINT)
            self.state = 137
            self.match(MiniLangParser.LPAREN)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 311393419264) != 0):
                self.state = 138
                self.expression_list()


            self.state = 141
            self.match(MiniLangParser.RPAREN)
            self.state = 142
            self.match(MiniLangParser.SEMIC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.COMMA)
            else:
                return self.getToken(MiniLangParser.COMMA, i)

